1、添加权限前可以运行版本； 2、实现角色添加，权限添加以及查看，用户添加之时进行权限的分配；

--- a/WebRoot/500.html
+++ b/WebRoot/500.html
@@ -2,7 +2,7 @@
 <HEAD>
 <title>欢迎您！十分抱歉，服务器出错了 ！</title>
 <META http-equiv=Content-Type content="text/html; charset=utf-8">
-<meta http-equiv="refresh" content="100;URL=http://localhost:8080/estore">
+<meta http-equiv="refresh" content="100;URL=http://localhost:8080/bos">
 <STYLE type=text/css>INPUT {
 	FONT-SIZE: 12px
 }
@@ -53,8 +53,7 @@ A:hover {
       <TABLE cellSpacing=0 cellPadding=0 width=480 border=0>
         <TBODY>
         <TR>
-          <TD width=6><IMG height=26 src="images/left.gif" 
-width=7></TD>
+          <TD width=6><IMG height=26 src="images/left.gif" width=7></TD>
           <TD background=images/bg.gif>
             <DIV align=center><FONT class=p6><A 
             href="#">返回首页</A>　 　|　　 <A 
